# ckrobotics

./: README.md
Coding Practice/: 10. Permutations.cpp  1014. Best Sightseeing Pair.cpp  1052. Grumpy Bookstore Owner.cpp  1091. Shortest Path in Binary Matrix.cpp  11. Container With Most Water.cpp  11. Rotate Image.cpp  1143. Longest Common Subsequence.cpp  1171. Remove Zero Sum Consecutive Nodes from Linked List.cpp  12. Group Anagrams.cpp  138. Copy List with Random Pointer.cpp  14. Sort Colors.cpp  141. Linked List Cycle.cpp  1456. Maximum Number of Vowels in a Substring of Given Length.cpp  15. 3Sum.cpp  1588. Sum of All Odd Length Subarrays.cpp  1657. Determine if Two Strings Are Close.cpp  17. Letter Combinations of a Phone Number.cpp  18. Populating Next Right Pointers in Each Node II.cpp  19. Single Number II.cpp  21. Linked List Cycle II.cpp  22. Generate Parentheses.cpp  22. LRU Cache.cpp  23. Insertion Sort List.cpp  24. Swap Nodes in Pairs.cpp  25. Reverse Words in a String.cpp  26. Fraction to Recurring Decimal.cpp  3. Longest Substring Without Repeating Characters.cpp  33. Kth Largest Element in an Array.cpp  35. Kth Smallest Element in a BST.cpp  36. Lowest Common Ancestor of a Binary Tree.cpp  42. Counting Bits.cpp  424. Longest Repeating Character Replacement.cpp  450. Delete Node in a BST.cpp  503. Next Greater Element II.cpp  525. Contiguous Array.cpp  64. Minimum Path Sum.cpp  641. Design Circular Deque.cpp  658. Find K Closest Elements.cpp  731. My Calendar II.cpp  763. Partition Labels.cpp  (+5 more)
LeetCode/: 106. Construct Binary Tree from Inorder and Postorder Traversal.cpp  13. Merge Intervals.cpp  16. Binary Tree Level Order Traversal.cpp  2. Add Two Numbers.cpp  24. Sort List.cpp  27. Largest Number.cpp  28. Number of Islands.cpp  30. Implement Trie (Prefix Tree).cpp  304. Range Sum Query 2D - Immutable.cpp  31. Course Schedule II.cpp  32. House Robber II.cpp  34. Combination Sum III.cpp  347. Top K Frequent Elements.cpp  355. Design Twitter.cpp  377. Combination Sum IV.cpp  39. Longest Increasing Subsequence.cpp  41. Odd Even Linked List.cpp  417. Pacific Atlantic Water Flow.cpp  454. 4Sum II.cpp  5. Longest Palindromic Substring.cpp  516. Longest Palindromic Subsequence.cpp  529. Minesweeper.cpp  692. Top K Frequent Words.cpp  7. Divide Two Integers.cpp  8. Next Permutation.cpp  9. Search in Rotated Sorted Array.cpp  994. Rotting Oranges.cpp
Research/Intelligent Visual Tracking/: rosbag_record_ck.sh  rosbag_record_script.sh
Research/Intelligent Visual Tracking/src/: .rosinstall
Research/MATLAB/Astar/: input_2.txt
Research/MATLAB/Dynamic Programming/: Dynamic_Programming.m  output1.txt  output2.txt
Research/MATLAB/MDP/: MDP.m
Research/MBZIRC Robotics Challenge/: sometext.txt
Research/MBZIRC Robotics Challenge System/: cmsvt_mbzirc.rosinstall
Research/MBZIRC Robotics Challenge System/calibration_data/: calib_results-5.txt  perspective_camera2.yml  perspective_camera3.yaml  perspective_camera4.yaml
Research/MBZIRC Robotics Challenge System/docs/: challenge3_hex1_commands.md  challenge3_hex2_commands.md
Research/MBZIRC Robotics Challenge System/scripts/: contact_sensor_gpio_permissions.sh
Research/MBZIRC Robotics Challenge System/src/localizer/: CMakeLists.txt  package.xml
Research/MBZIRC Robotics Challenge System/src/localizer/include/localizer/: rtk_simulator.h
Research/MBZIRC Robotics Challenge System/src/localizer/launch/: fisheye.launch  localizer.launch
Research/MBZIRC Robotics Challenge System/src/localizer/src/: debug_node.cpp  fisheye_corrector.cpp  image_tf_node.cpp  rtk_simulator_node.cpp
Research/MBZIRC Robotics Challenge/src/governor/: CMakeLists.txt  package.xml
Research/MBZIRC Robotics Challenge/src/governor/launch/: task_allocator.launch
Research/MBZIRC Robotics Challenge/src/governor/msg/: assignment.msg
Research/MBZIRC Robotics Challenge/src/governor/src/: governor.cpp  hungarian.cpp  start_script.sh  target_manager.cpp
Research/Optimal Camera System Placement with Simulation/: check.m  check_feasible_new_combi.m  check_first_feasible_new.m  constraints_new_combi.m  obj_func_with_gradient_comb.m  optimal_pcv_placement_new_combi.m  simulation_new_combi.m  solve_fmincon_new_combi.m
Research/Optimal Target Scheduling with Simulation/: simulation_prediction_pid_TSP.m  simulation_prediction_pid_TSP_KF.m  tsp_ortho_new.m
Research/Perception Codes/: color_detection_KF.cpp  cue_scheduling.cpp  dense_optical_flow_normal.cpp  dense_opticl_flow_fisheye.cpp  epipolar_range_estimation_yolo.cpp  haseeb_june.cpp  hex_tf2_broadcaster.cpp  multitracker.cpp  optical_flow_fisheye_KF.cpp  pose_estimation.cpp  rbe.cpp  roc_fp.cpp  roc_tp.cpp  stabilization_fusion.cpp  stabilization_insta_homography_KF.cpp  template_matching_KF_omnicam.cpp  tracker_central.cpp  tracker_peripheral.cpp  tracker_peripheral2.cpp  tracker_peripheral2_single.cpp  tracker_peripheral_single.cpp
Research/Stereo Vision Delay Prediction/src/prediction_display/: CMakeLists.txt
Research/Stereo Vision Delay Prediction/src/prediction_display/src/: image_prediction.cpp  image_stabilization.cpp
Research/visual_tracker_2.0/: README.md  rosbag_record_script.sh
Research/visual_tracker_2.0/src/detection/: CMakeLists.txt  model.xml  package.xml  setup.py
Research/visual_tracker_2.0/src/detection/launch/: full_boom_system_starter.launch  full_boom_system_starter_wManual.launch  full_system_starter.launch  pid_launcher.launch  piksi_multi_rover.launch  system_starter.launch  tf_broadcasters.launch  usb_cam-test.launch  visual_tracking_gige.launch  visual_tracking_gige_wManual.launch
Research/visual_tracker_2.0/src/detection/src/: aircraft_tf2_broadcaster.cpp  color_detection.cpp  color_detection_KF.cpp  darknet.py  detection_node.cpp  gimbal_tf2_broadcaster.cpp  governor.cpp  governor_wManual.cpp  ivt_state_machine.py  ivt_state_machine_starter  mavros_target_tf2_broadcaster.cpp  observer_aircraft_tf2_broadcaster.cpp  omnicam_tf2_broadcaster.cpp  psuedo_rtk.cpp  range_calc.py  range_calc_starter  yoloStarter  yolo_cv_router.py  yolo_starter.py
(+358 files in other folders)
